syntax = "proto3";
package dbtesterpb;

import "github.com/gogo/protobuf/gogoproto/gogo.proto";

option (gogoproto.marshaler_all) = true;
option (gogoproto.sizer_all) = true;
option (gogoproto.unmarshaler_all) = true;
option (gogoproto.goproto_getters_all) = false;

message flag__zookeeper__r3_4_9 {
  // JavaDJuteMaxBuffer is for '-Djute.maxbuffer' flag.
  // It is the maximum size, in bytes, of a request or response.
  // See http://zookeeper.apache.org/doc/trunk/zookeeperAdmin.html#Unsafe+Options for more.
  uint64 JavaDJuteMaxBuffer = 1 [(gogoproto.moretags) = "yaml:\"java_d_jute_max_buffer\""];

  // JavaXms is for '-Xms' flag (minimum Java heap size).
  // See https://docs.oracle.com/cd/E13150_01/jrockit_jvm/jrockit/jrdocs/refman/optionX.html for more.
  string JavaXms = 2 [(gogoproto.moretags) = "yaml:\"java_xms\""];

  // JavaXmx is for '-Xmx' flag (maximum Java heap size).
  // See https://docs.oracle.com/cd/E13150_01/jrockit_jvm/jrockit/jrdocs/refman/optionX.html for more.
  string JavaXmx = 3 [(gogoproto.moretags) = "yaml:\"java_xmx\""];

  // MyID contains a single integer in human readable ASCII text that represents the server id.
  // Each ZooKeeper server has a unique id. This id is used in two places: the myid file and the
  // configuration file. The myid file identifies the server that corresponds to the given data directory.
  // See http://zookeeper.apache.org/doc/trunk/zookeeperAdmin.html#sc_dataFileManagement for more.
  uint32 MyID = 100;

  // ClientPort is by default '2181'.
  // No need to set manually. Inherited from 'database_port_to_connect'.
  int64 ClientPort = 101;

  // See http://zookeeper.apache.org/doc/trunk/zookeeperAdmin.html for more.
  int64 TickTime = 102 [(gogoproto.moretags) = "yaml:\"tick_time\""];
  int64 InitLimit = 103 [(gogoproto.moretags) = "yaml:\"init_limit\""];
  int64 SyncLimit = 104 [(gogoproto.moretags) = "yaml:\"sync_limit\""];
  int64 SnapCount = 105 [(gogoproto.moretags) = "yaml:\"snap_count\""];
  int64 MaxClientConnections = 106 [(gogoproto.moretags) = "yaml:\"max_client_connections\""];
}

message flag__zookeeper__r3_5_2_alpha {
  // JavaDJuteMaxBuffer is for '-Djute.maxbuffer' flag.
  // It is the maximum size, in bytes, of a request or response.
  // See http://zookeeper.apache.org/doc/trunk/zookeeperAdmin.html#Unsafe+Options for more.
  uint64 JavaDJuteMaxBuffer = 1 [(gogoproto.moretags) = "yaml:\"java_d_jute_max_buffer\""];

  // JavaXms is for '-Xms' flag (minimum Java heap size).
  // See https://docs.oracle.com/cd/E13150_01/jrockit_jvm/jrockit/jrdocs/refman/optionX.html for more.
  string JavaXms = 2 [(gogoproto.moretags) = "yaml:\"java_xms\""];

  // JavaXmx is for '-Xmx' flag (maximum Java heap size).
  // See https://docs.oracle.com/cd/E13150_01/jrockit_jvm/jrockit/jrdocs/refman/optionX.html for more.
  string JavaXmx = 3 [(gogoproto.moretags) = "yaml:\"java_xmx\""];

  // MyID contains a single integer in human readable ASCII text that represents the server id.
  // Each ZooKeeper server has a unique id. This id is used in two places: the myid file and the
  // configuration file. The myid file identifies the server that corresponds to the given data directory.
  // See http://zookeeper.apache.org/doc/trunk/zookeeperAdmin.html#sc_dataFileManagement for more.
  uint32 MyID = 100;

  // ClientPort is by default '2181'.
  // No need to set manually. Inherited from 'database_port_to_connect'.
  int64 ClientPort = 101;

  // See http://zookeeper.apache.org/doc/trunk/zookeeperAdmin.html for more.
  int64 TickTime = 102 [(gogoproto.moretags) = "yaml:\"tick_time\""];
  int64 InitLimit = 103 [(gogoproto.moretags) = "yaml:\"init_limit\""];
  int64 SyncLimit = 104 [(gogoproto.moretags) = "yaml:\"sync_limit\""];
  int64 SnapCount = 105 [(gogoproto.moretags) = "yaml:\"snap_count\""];
  int64 MaxClientConnections = 106 [(gogoproto.moretags) = "yaml:\"max_client_connections\""];
}

message flag__zookeeper__r3_5_3_beta {
  // JavaDJuteMaxBuffer is for '-Djute.maxbuffer' flag.
  // It is the maximum size, in bytes, of a request or response.
  // See http://zookeeper.apache.org/doc/trunk/zookeeperAdmin.html#Unsafe+Options for more.
  uint64 JavaDJuteMaxBuffer = 1 [(gogoproto.moretags) = "yaml:\"java_d_jute_max_buffer\""];

  // JavaXms is for '-Xms' flag (minimum Java heap size).
  // See https://docs.oracle.com/cd/E13150_01/jrockit_jvm/jrockit/jrdocs/refman/optionX.html for more.
  string JavaXms = 2 [(gogoproto.moretags) = "yaml:\"java_xms\""];

  // JavaXmx is for '-Xmx' flag (maximum Java heap size).
  // See https://docs.oracle.com/cd/E13150_01/jrockit_jvm/jrockit/jrdocs/refman/optionX.html for more.
  string JavaXmx = 3 [(gogoproto.moretags) = "yaml:\"java_xmx\""];

  // MyID contains a single integer in human readable ASCII text that represents the server id.
  // Each ZooKeeper server has a unique id. This id is used in two places: the myid file and the
  // configuration file. The myid file identifies the server that corresponds to the given data directory.
  // See http://zookeeper.apache.org/doc/trunk/zookeeperAdmin.html#sc_dataFileManagement for more.
  uint32 MyID = 100;

  // ClientPort is by default '2181'.
  // No need to set manually. Inherited from 'database_port_to_connect'.
  int64 ClientPort = 101;

  // See http://zookeeper.apache.org/doc/trunk/zookeeperAdmin.html for more.
  int64 TickTime = 102 [(gogoproto.moretags) = "yaml:\"tick_time\""];
  int64 InitLimit = 103 [(gogoproto.moretags) = "yaml:\"init_limit\""];
  int64 SyncLimit = 104 [(gogoproto.moretags) = "yaml:\"sync_limit\""];
  int64 SnapCount = 105 [(gogoproto.moretags) = "yaml:\"snap_count\""];
  int64 MaxClientConnections = 106 [(gogoproto.moretags) = "yaml:\"max_client_connections\""];
}
